--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "expo": "~51.0.6",
     "expo-status-bar": "~1.12.1",
+    "express": "^4.19.2",
     "react": "18.2.0",
     "react-native": "0.74.1"
   },
