--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,7 @@
 name: Hello World
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
 
 jobs:
   hello-world-job:
@@ -15,3 +13,35 @@ jobs:
 
       - name: Print Hello World
         run: echo "Hello, World!"
+
+  server-test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Start the server
+        run: node server.js &
+        env:
+          PORT: 3000
+
+      - name: Wait for server to start
+        run: sleep 5
+
+      - name: Make GET request to server
+        run: |
+          response=$(curl -s http://localhost:3000)
+          if [[ "$response" != "Hello, is it me you're looking for?" ]]; then
+            echo "Test failed: Unexpected response: $response"
+            exit 1
+          fi
+          echo "Test passed: Expected response received"        
