--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,44 +4,56 @@ on:
   workflow_dispatch:
 
 jobs:
-  hello-world-job:
+  build:
     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Print Hello World
-        run: echo "Hello, World!"
-
-  server-test:
-    runs-on: ubuntu-latest
+    services:
+      docker:
+        image: circleci/android:api-30
+        options: --privileged
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+      - name: Set up JDK
+        uses: actions/setup-java@v2
         with:
-          node-version: '14'
+          distribution: 'adopt'
+          java-version: '11'
 
-      - name: Install dependencies
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v2
+        with:
+          api-level: 30
+          target: default
+          arch: x86_64
+          profile: default
+          ndk: 21.3.6528147
+
+      - name: Install Expo CLI
+        run: npm install -g expo-cli
+
+      - name: Install project dependencies
         run: npm install
 
-      - name: Start the server
-        run: node server.js &
-        env:
-          PORT: 3000
+      - name: Start ADB server
+        run: adb start-server
 
-      - name: Wait for server to start
-        run: sleep 5
+      - name: Create Android emulator
+        run: echo "no" | avdmanager create avd -n test -k "system-images;android-30;default;x86_64"
 
-      - name: Make GET request to server
+      - name: Start Android emulator
         run: |
-          response=$(curl -s http://localhost:3000)
-          if [[ "$response" != "Hello, is it me you're looking for?" ]]; then
-            echo "Test failed: Unexpected response: $response"
-            exit 1
-          fi
-          echo "Test passed: Expected response received"        
+          emulator -avd test -no-window -no-audio -no-boot-anim &
+          adb wait-for-device
+          adb shell input keyevent 82 &
+
+      - name: Install Maestro CLI
+        run: curl -Ls "https://get.maestro.mobile.dev" | bash
+
+      - name: Build and run Expo app
+        run: npx expo run:android
+
+      - name: Run Maestro tests
+        run: maestro test maestro/test.yml
