--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,51 +3,50 @@ name: Hello World
 on:
   workflow_dispatch:
 
+env:
+ANDROID_ARCH: x86_64
+ANDROID_TARGET: google_apis_playstore
+API_LEVEL: 33
+ANDROID_BUILD_TOOLS_VERSION: 33.0.2
+ANDROID_SDK_PACKAGES: system-images;android-33;google_apis_playstore;x86_64 platforms;android-33 build-tools;33.0.2 platform-tools emulator
+EMULATOR_TIMEOUT: 350
+EMULATOR_NAME: nexus
+
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    services:
-      docker:
-        image: circleci/android:api-30
-        options: --privileged
+    timeout-minutes: 20
+    runs-on: macos-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up JDK
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'adopt'
-          java-version: '11'
+      - uses: actions/checkout@v3
+        
+      - name: Add avdmanager and sdkmanager to system PATH
+        run: |
+            echo "$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/emulator:$ANDROID_HOME/tools:$ANDROID_HOME/platform-tools:$ANDROID_HOME/build-tools/${{ env.ANDROID_BUILD_TOOLS_VERSION }}" >> $GITHUB_PATH
 
-      - name: Set up Android SDK
-        uses: android-actions/setup-android@v2
-        with:
-          api-level: 30
-          target: default
-          arch: x86_64
-          profile: default
-          ndk: 21.3.6528147
+      - name: Install Sdk
+        run: |
+           yes Y | sdkmanager --licenses
+           sdkmanager --install ${ANDROID_SDK_PACKAGES}
+  
+      - name: Build emulator
+        run: |
+            echo "no" | avdmanager --verbose create avd --force -n $EMULATOR_NAME --abi "${ANDROID_TARGET}/${ANDROID_ARCH}" -k "system-images;android-${API_LEVEL};${ANDROID_TARGET};${ANDROID_ARCH}"
+
+      - name: Launch emulator
+        run: |
+          chmod +x ./start_emu_headless.sh
+          EMULATOR_TIMEOUT=$EMULATOR_TIMEOUT EMULATOR_NAME=$EMULATOR_NAME ./start_emu_headless.sh
 
       - name: Install Expo CLI
         run: npm install -g expo-cli
 
       - name: Install project dependencies
         run: npm install
-
-      - name: Start ADB server
-        run: adb start-server
-
-      - name: Create Android emulator
-        run: echo "no" | avdmanager create avd -n test -k "system-images;android-30;default;x86_64"
-
-      - name: Start Android emulator
-        run: |
-          emulator -avd test -no-window -no-audio -no-boot-anim &
-          adb wait-for-device
-          adb shell input keyevent 82 &
 
       - name: Install Maestro CLI
         run: curl -Ls "https://get.maestro.mobile.dev" | bash
