add npm install

--- a/.github/workflows/e2e-ios.yaml
+++ b/.github/workflows/e2e-ios.yaml
@@ -22,7 +22,7 @@ jobs:
           brew install idb-companion
 
       - name: Install dependencies
-        run: npm
+        run: npm install
       - name: Install Maestro
         run: |
           curl -Ls "https://get.maestro.mobile.dev" | bash
