--- a/.github/workflows/e2e-ios.yaml
+++ b/.github/workflows/e2e-ios.yaml
@@ -28,14 +28,33 @@ jobs:
           curl -Ls "https://get.maestro.mobile.dev" | bash
           echo "$HOME/.maestro/bin" >> $GITHUB_PATH
 
-      - name: Build & install app
-        run: |
-          npx expo prebuild -p ios
-          gem install xcpretty
-          xcodebuild -workspace ios/expomaestroactions.xcworkspace -configuration Release -sdk iphonesimulator -derivedDataPath ios/build -scheme expomaestroactions | xcpretty
-          open -a Simulator
-          sleep 10
-          xcrun simctl install booted ios/build/Build/Products/Release-iphonesimulator/expomaestroactions.app
+      - name: Install Xcode
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: latest-stable
+
+      - name: Generate iOS Project
+        run: npx expo prebuild --platform ios --no-install
+
+      - name: Setup Cocoapods
+        uses: maxim-lobanov/setup-cocoapods@v1
+        with:
+          version: latest
+
+      - name: Install Pods
+        working-directory: ./ios
+        run: pod install --repo-update
+
+      - name: Build iOS
+        working-directory: ./ios
+        run: xcodebuild -workspace ./expomaestroactions.xcworkspace -scheme expomaestroactions -configuration Release -sdk iphonesimulator -derivedDataPath build -arch "$(uname -m)"
+
+      - name: Run Simulator
+        uses: futureware-tech/simulator-action@v3
+        with:
+          model: "iPhone 15"
+          os_version: 17
+          erase_before_boot: false
 
       - name: Run Maestro
         run: maestro test maestro/test.yml
