--- a/.github/workflows/e2e-ios.yaml
+++ b/.github/workflows/e2e-ios.yaml
@@ -31,7 +31,7 @@ jobs:
       - name: Install Xcode
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: latest-stable
+          xcode-version: 15.3
 
       - name: Generate iOS Project
         run: npx expo prebuild --platform ios --no-install
@@ -53,7 +53,7 @@ jobs:
         uses: futureware-tech/simulator-action@v3
         with:
           model: "iPhone 15"
-          os_version: 17
+          os_version: 17.4
           erase_before_boot: false
 
       - name: Run Maestro
